--- a/first_day_stuff/first_day.html
+++ b/first_day_stuff/first_day.html
@@ -11,6 +11,14 @@
     <h1>My First Web Page</h1>
     <h2>Headings Are Great Fun</h2>
     <p>This is my first paragraph</p>
+    <p><a href="http://www.google.com">Click here for Google!</a></p>
+    <p><img src="https://avatars3.githubusercontent.com/u/541310?s=460&v=4" alt="">
+        <strong>This</strong> is me</p>
+    
+    <form action="">
+        First Name: <br>
+        <input type="text">
+    </form>
 </body>
 
 </html>
